[package]
name = "async-runtime-lib"
version = "1.0.0"
authors = ["Fanghao Yang"]
edition = "2021"

[lib]
name = "asyncruntime"
crate-type = ["staticlib"]

[dependencies]
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "sync",
    "net",
] }
reqwest = { version = "0.11.27", default-features = false, features = [
    "json",
    "rustls-tls",
] }
# must use serde 1.0.197 to avoid build error with sgx libc
serde = { version = "=1.0.197", features = ["derive"] }
lazy_static = "1.4.0"

[target.'cfg(not(target_vendor = "teaclave"))'.dependencies]
sgx_types = { git = "https://gitlab.com/dexlabs/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sgx-emm" }

[target.'cfg(target_vendor = "teaclave")'.dependencies]
sgx_libc = { git = "https://gitlab.com/dexlabs/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sgx-emm", features = [
    "pthread",
] }
anyhow = "1.0.71"
