[package]
name = "async-runtime-lib"
version = "1.0.0"
authors = ["Fanghao Yang"]
edition = "2021"

[lib]
name = "asyncruntime"
crate-type = ["staticlib"]

[dependencies]
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "sync",
    "net",
] }
rustls = { version = "0.23", default-features = false, features = [
    "tls12",
    "ring",
] }
webpki-roots = "0.26"
bytes = "1.9.0"
http-body-util = "0.1.2"
hyper = { version = "1.4", default-features = false, features = [
    "http1",
    "client",
] }
anyhow = "1.0.93"
serde = { version = "=1.0.197", features = ["derive"] }
lazy_static = "1.4.0"
serde_json = { version = "1" }
hyper-util = { version = "0.1", default-features = false, features = [
    "client-legacy",
] }
hyper-rustls = { version = "0.27", default-features = false, features = [
    "tls12",
    "http1",
] }

[target.'cfg(not(target_vendor = "teaclave"))'.dependencies]
sgx_types = { git = "https://gitlab.com/dexlabs/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sgx-emm" }

[target.'cfg(target_vendor = "teaclave")'.dependencies]
sgx_libc = { git = "https://gitlab.com/dexlabs/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sgx-emm", features = [
    "pthread",
] }
anyhow = "1.0.71"
